# camaroo

./: .gitignore  3  CMakeLists.txt  README.md  camaroo-ideas
.cache/clangd/index/: main.cpp.5C83070962A51B61.idx  tokenizer.cpp.F0FC24B96F44406C.idx  tokenizer.h.1BC7C3CDCAF1C75C.idx
camaroo-interpreter/src/: main.cpp
camaroo_interpreter/: CMakeLists.txt
camaroo_interpreter/header/: Tokenizer.h  ast.h  evaluator.h  parser.h  tokenizer.h
camaroo_interpreter/src/: evaluator.cpp  main.cpp  parser.cpp  tokenizer.cpp
camaroo_interpreter/src/.cache/clangd/index/: main.cpp.51EC374DC1348F64.idx  parser.cpp.148D523C24BAB56D.idx
camaroo_tests/: CMakeLists.txt
camaroo_tests/res/: block_stmnts_test.cmr  data_type_test.cmr  evaluator_test.cmr  fnum_test.cmr  identifier_test.cmr  letter_test.cmr  logical_operators_test.cmr  peeking_token_test.cmr  printing_test.cmr  special_character_test.cmr  special_syntax_test.cmr  statement_test.cmr  text_test.cmr
camaroo_tests/src/: tokenizer_test.cpp
